# playfair

./: Pipfile  README.md  pyproject.toml
playfair/: __init__.py  playfair.py  playfair_decrypt.py  playfair_encrypt.py  playfair_key.py
playfair/objects/: __init__.py  block.py  char.py  char_location.py  input_block.py  rule.py
tests/: test_playfair.py  test_playfair_decrypt.py  test_playfair_encrypt.py  test_playfair_key.py
tests/files/: 01_enc_file.txt  02_dec_file.txt
tests/objects/: test_block.py  test_char.py  test_char_location.py  test_input_block.py  test_rule.py
